Table fix on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -126,21 +126,20 @@ table{
   border-collapse: collapse;
   text-align: left;
   width: 100%;
-  
-  img{
-    box-shadow: none;
-  }
+  white-space: nowrap;
+	
+	img{
+    	box-shadow: none;
+ 	}
 }
 
 th{
   background-color: $dark-grey;
   color: $off-white;
-  padding: 10px;
 }
 
-td, tr {
+th, td, tr {
   padding: 10px;
-
 }
 
 tr:nth-child(even){
@@ -159,9 +158,15 @@ footer {
 }
 
 @media screen and (max-width: 1084px) {
-  .wrapper {
-    margin-left: 30px;
-    margin-right: 30px;
+	.wrapper {
+		margin-left: 30px;
+		margin-right: 30px;
+	}
+}
+
+@media screen and (max-width: 768px) {
+  th, td, tr {
+      padding: 5px;
   }
 }
 
